# newAIUDF

./: README.md  build.sbt
semantic-native/: Cargo.toml
semantic-native/src/: expressions.rs  lib.rs  llm.rs
src/main/scala/SemOperatorPlugin/: DatasetExtensions.scala  SemFilterExample.scala  SemSparkSessionExtension.scala  semanticFilter.scala
src/main/scala/SemOperatorPlugin/utils/: ArrowColumnarConverters.scala  ArrowWriter.scala  AutoCloseProcessingHelper.scala  GlobalAllocator.scala  JNIProcessor.scala  JNIProcessorFactory.scala  MemoryUtils.scala  NativeLibraryLoader.scala
src/main/scala/org/apache/spark/sql/: Dataset.scala
src/main/scala/org/apache/spark/sql/catalyst/plans/logical/: SemanticLogicalOperators.scala
src/main/scala/org/apache/spark/sql/execution/: SemanticPhysicalOperators.scala
src/test/python/: SemanticExtension.py  main.py
src/test/scala/: SemFilterExample.scala
